--- a/04_Conditional_Statement.ipynb
+++ b/04_Conditional_Statement.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/04_Conditional_Statement.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ajju198821/fmml2021/blob/main/04_Conditional_Statement.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -60,43 +60,96 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eDT9R8AOqnsz"
+        "id": "eDT9R8AOqnsz",
+        "outputId": "0ce1a08c-5614-44a2-eb63-7637212ef79c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
         "type(a)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 12\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gbOsmJaIqiIP"
+        "id": "gbOsmJaIqiIP",
+        "outputId": "616f26fb-b600-4464-c985-65818aaa17ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = int(a)\n",
         "type(a)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8D8fTIoYqdGE"
+        "id": "8D8fTIoYqdGE",
+        "outputId": "33d61958-0691-4861-c5a6-d7083e33818c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer b: 34\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cehfXMvowN0S"
+        "id": "cehfXMvowN0S",
+        "outputId": "179dfa37-c5ad-431a-8cb8-b3dc17f63d6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "if (a > b):\n",
@@ -108,8 +161,17 @@
         "else:\n",
         "  print (\"a is neither greater than b,  nor less than b\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is less than b\n",
+            "which is clear\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -123,7 +185,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZF-tcVscuADN"
+        "id": "ZF-tcVscuADN",
+        "outputId": "cd78c0a1-e70c-4d13-fee8-117482977277",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
@@ -131,19 +197,40 @@
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 12\n",
+            "Enter an integer b: 34\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N2E5veph8_9V"
+        "id": "N2E5veph8_9V",
+        "outputId": "7614da2b-6725-49e9-99bb-06109cd643c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "if (a < b): print (\"a is lesser than b\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is lesser than b\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -157,7 +244,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SwO5vZ8LxGMA"
+        "id": "SwO5vZ8LxGMA",
+        "outputId": "2a576615-523c-4b03-a997-719e01c2be7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
@@ -165,19 +256,40 @@
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 3\n",
+            "Enter an integer b: 1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-SLed6y6xJoq"
+        "id": "-SLed6y6xJoq",
+        "outputId": "c85d7e10-e572-42db-d25d-ddbcd4e911b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (\"a is less than b\") if (a < b) else print (\"a - {} is not less than b - {}.\".format(a, b))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a - 3 is not less than b - 1.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -191,25 +303,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JHGOgFs-vWbq"
+        "id": "JHGOgFs-vWbq",
+        "outputId": "a561c9dc-d395-4f52-85b1-1930557c52cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter first string: \")\n",
         "b = input (\"Enter second string: \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter first string: aziz\n",
+            "Enter second string: abdul\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qgqqBPjAvLQx"
+        "id": "qgqqBPjAvLQx",
+        "outputId": "1cf0f813-d960-45f2-c04b-225422da8734",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (\"first string comes earlier\") if (a<b) else print (\"second string comes earlier\") if (b<a) else print (\"both strings are same\")  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "second string comes earlier\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -223,13 +360,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b_QjChOW2VJY"
+        "id": "b_QjChOW2VJY",
+        "outputId": "ce417541-e150-49c9-dedd-a7bb75444db1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Your program should come here"
+        "# Your program should come here\n",
+        "print('a' == 'a')\n",
+        "print('a' == 'A')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pJDT5MRDJM4s",
+        "outputId": "5cfbd4bf-d95b-46a9-b92c-19e6e3424d91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "Vowel_list = ['a','e','i','o','u','A','E','I','O','U']\n",
+        "a = input('Enter a character:::')\n",
+        "if a in Vowel_list: \n",
+        "  print('input char is Vowel')\n",
+        "else:\n",
+        "  print('Input Charr is not Vowel')"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a character:::E\n",
+            "input char is Vowel\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
